--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@storybook/addon-actions": "^6.4.12",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/client-api": "^6.4.12",
+    "antd": "^4.18.3",
+    "axios": "^0.24.0",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.22",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
